@@ -3,6 +3,7 @@ PL (power line) controller and the CM19A RF controller.
 
 mochad stands for Multiple Online Controllers for Home Automation Daemon.
 
+0.1.11 Fix xdim (extended dim) that only worked for unit code 3.
 0.1.10 Fix major client problem. Commands from clients stopped working.
 0.1.9 Add support for OpenRemote 2.0 with iPhone and Android clients.
 0.1.8 Add support for Chumby application.
